[package]
name = "remarkwiki"
version = "0.1.0"
edition = "2021"
authors = ["Shiv Shankar Dayal <shivshankar.dayal@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
vergen = { version = "8.2.4", features = [ "git" ] }

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
cookie = []

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [ "runtime-tokio", "macros", "chrono", "uuid", "json", "time" ]

[dependencies]
ntex = { version = "1.0", features = ["tokio", "cookie", "compress"]}
ntex-cors = { version = "0.5.0" }
clap =  { version = "4.4.18", features = [ "derive" ] }
lettre = { version = "0.11.3", features = ["tokio1-native-tls", "hostname", "builder"] }
nonblock-logger = { version = "0.2.2", default-features = false, features = ["color", "dbg"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono =  { version = "0.4.31", features = ["serde"] }
rust_decimal = { version = "1.33.1", features = [ "serde-float" ] }
validator = { version = "0.16.1", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_qs = "0.12"
serde_json = "1.0.111"	
json5 = "0.4.1"
rust-argon2 = "2.1.0"
ring = "0.17.7"
rand = "0.8.5"
hex = "0.4.3"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
futures = "0.3.30"
thiserror = "1.0.56"
anyhow = "1.0.79"
url = "2.5.0"
itsdangerous = "0.4.1"
num_cpus = "1.16.0"
cargo-watch = "8.5.2"
cookie = "0.18.0"
async-trait = "0.1.77"
mobc = "0.8.3"
mobc-redis = "0.8.2"
base64 = "0.21.7"
